Fixed Vertical Scrollbar Appearance

--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,5 @@ ul li {
 ul {  padding: 0;  }
 
 p {  margin: 0;  }
+
+body { margin: auto;}
